--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.15.6",
     "@mui/material": "^5.15.6",
     "@mui/x-date-pickers": "^8.7.0",
+    "@mui/x-date-pickers-pro": "^8.7.0",
     "dayjs": "^1.11.13",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
