--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@mui/x-date-pickers": "^8.7.0",
     "@types/recharts": "^1.8.29",
     "dayjs": "^1.11.13",
+    "file-saver": "^2.0.5",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.6.3",
-    "recharts": "^3.1.0"
+    "recharts": "^3.1.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
