--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.15.6",
     "@mui/material": "^5.15.6",
     "@mui/x-date-pickers": "^8.7.0",
+    "@types/file-saver": "^2.0.7",
     "@types/recharts": "^1.8.29",
     "dayjs": "^1.11.13",
     "file-saver": "^2.0.5",
