--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@types/recharts": "^1.8.29",
     "dayjs": "^1.11.13",
     "file-saver": "^2.0.5",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
