--- a/package.json
+++ b/package.json
@@ -1,14 +1,4 @@
 {
-  "name": "reliablyme-dashboard",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
-  },
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
@@ -19,8 +9,8 @@
     "@types/recharts": "^1.8.29",
     "dayjs": "^1.11.13",
     "file-saver": "^2.0.5",
-    "jspdf": "^3.0.1",
-    "jspdf-autotable": "^5.0.2",
+    "jspdf": "2.5.1",
+    "jspdf-autotable": "3.8.2",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
